<resources>
    <string name="app_name">Калькулятор баллов ЕГЭ</string>
    <string name="getUniver">Подобрать вуз</string>
    <string name="Drus">Русский</string>
    <string name="Dmath">Математика</string>
    <string name="Dobsh">Обществознание</string>
    <string name="Dfiz">Физика</string>
    <string name="Dist">История</string>
    <string name="Dbio">Биология</string>
    <string name="Dchem">Химия</string>
    <string name="Dlang">Иностранный язык</string>
    <string name="Dikt">Информатика и ИКТ</string>
    <string name="Dgeo">География</string>
    <string name="Dlit">Литература</string>
    <string name="BTEkz">Побальный рейтинг</string>
    <string name="BTZP">Рейтинг зарплат</string>
    <string name="info1">Вступительные предметы</string>
    <string name="info2">Проходной балл</string>
    <string name="info3">Средняя зарплата</string>
    <string name="info5">Университет</string>
    <string name="infoError">Введите корректные баллы!</string>
    <string name="infoError2">Предметов должно быть больше двух!</string>
    <string name="osk">Oк</string>
    <string name="eerror">Ошибка!</string>
    <string name="titleER">Пожалуйста подождите</string>
    <string name="Aldial">Идет загрузка новых данных..</string>
    <string name="infoproc">Средняя доля трудоустройства</string>
    <string name="infozp">Средняя зарплата выпускников</string>
    <string name="infoNullBulls">Университетов с вашими баллами нет. Попробуйте в следующем году</string>
    <string name="lableNullBulls">Внимание!</string>
    <string name="minBullsR">Минимальный балл 34</string>
    <string name="minBullsM">Минимальный балл 27</string>
    <string name="minBullsO">Минимальный балл 40</string>
    <string name="minBullsF">Минимальный балл 36</string>
    <string name="minBullsI">Минимальный балл 29</string>
    <string name="minBullsIn">Минимальный балл 22</string>
    <string name="minBullsL">Минимальный балл 32</string>
    <string name="title_activity_university">Список университетов</string>
</resources>
