<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="310dp"
    android:layout_margin="15dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/rus"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Drus" />

        <EditText
            android:id="@+id/rusBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/math"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dmath" />

        <EditText
            android:id="@+id/mathBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/obsh"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dobsh" />

        <EditText
            android:id="@+id/obshBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/fiz"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dfiz" />

        <EditText
            android:id="@+id/fizBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/ist"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dist" />

        <EditText
            android:id="@+id/istBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/bio"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dbio" />

        <EditText
            android:id="@+id/bioBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/chem"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dchem" />

        <EditText
            android:id="@+id/chemBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/lang"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dlang" />

        <EditText
            android:id="@+id/langBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/ikt"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dikt" />

        <EditText
            android:id="@+id/iktBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/geo"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dgeo" />

        <EditText
            android:id="@+id/geoBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/lit"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/Dlit" />

        <EditText
            android:id="@+id/litBalls"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:textColor="@color/textColor"
            android:background="@color/bottomsColor"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:text="" />
    </LinearLayout>

</LinearLayout>