<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroun">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="8dp"
        android:background="@color/backgroun"
        android:layout_marginBottom="8dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@color/backgroun">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="8dp"
                card_view:cardCornerRadius="8dp"
                android:background="@color/bottomsColor"
                android:layout_marginBottom="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/bottomsColor"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:id="@+id/textViewInfo4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorN"
                        android:background="@color/bottomsColor"
                        android:textSize="15pt"
                        android:text="@string/info5" />

                    <TextView
                        android:id="@+id/university"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/bottomsTextColor"
                        android:textStyle="bold"
                        android:textSize="20pt"
                        android:layout_margin="1dp"
                        android:background="@color/bottomsColor"
                        android:text="" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="8dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginBottom="1dp"
                android:background="@color/bottomsColor">
                <TextView
                    android:id="@+id/napr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="20pt"
                    android:textStyle="bold"
                    android:background="@color/bottomsColor"
                    android:text="" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="8dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginBottom="1dp"
                android:background="@color/bottomsColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/bottomsColor">

                    <TextView
                        android:id="@+id/textViewInfo1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorN"
                        android:background="@color/bottomsColor"
                        android:textSize="15pt"
                        android:text="@string/info1" />
                    <TextView
                        android:id="@+id/disciplins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:background="@color/bottomsColor"
                        android:layout_margin="1dp"
                        android:textSize="20pt"
                        android:text="" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/backgroun">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardElevation="8dp"
                    card_view:cardCornerRadius="8dp"
                    android:layout_weight="1"
                    android:layout_marginRight="0.5dp"
                    android:textAlignment="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/bottomsColor"
                        android:textAlignment="center">

                        <TextView
                            android:id="@+id/textViewInfo2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/textColorN"
                            android:textAlignment="center"
                            android:background="@color/bottomsColor"
                            android:layout_margin="1dp"
                            android:textSize="17pt"
                            android:text="@string/info2" />

                        <TextView
                            android:id="@+id/balls"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textColor="@color/textColor"
                            android:background="@color/bottomsColor"
                            android:layout_margin="1dp"
                            android:textSize="20pt"
                            android:text=""
                            android:textAlignment="center"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardElevation="8dp"
                    card_view:cardCornerRadius="8dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="0.5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/bottomsColor">

                        <TextView
                            android:id="@+id/textViewInfo3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/textColorN"
                            android:textAlignment="center"
                            android:textSize="17pt"
                            android:text="@string/info3" />

                        <TextView
                            android:id="@+id/zp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textColor="@color/textColor"
                            android:textAlignment="center"
                            android:textSize="20pt"
                            android:text="" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>